--- a/Flask-Course/HTMLCourse/basic.html
+++ b/Flask-Course/HTMLCourse/basic.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title> This is Flask Course </title>
+        <link rel="stylesheet" href="master.css">
     </head>
     <body>
         <h1> This is H1 Tags</h1>
@@ -29,6 +30,52 @@
         </ol>
         </ul>
     </ol>
+
+    <div class="p1">
+        <p> 
+            I am Learning Python Backend Engineering!!!
+            Anyone Can Learn These Skills
+        </p>
+
+    </div>
+
+    <p>This is The course with in india to get more pay Like $130,000 ~= 1.4 Cr</p>
+    <img src="pic.jpeg" alt="No Image Found :)))">
+
+    <a href="pic.jpeg">Best Image</a>
+
+    <a href="hari.html">My Website </a>
+
+    <p>Here are the three reasons to Learn HTML CSS Java-Script</p>
+
+
+    <form > 
+
+        <label for="emailtag"> Email :  </label>
+        <input id="emailtag" type="email" name="" value="email">
+        <br>
+
+        <label for="passwordtag"> Password : </label>
+        <input id="passwordtag" type="password" name="" placeholder="password">
+        <br>
+
+        <label for="submittag"> Submit</label>
+        <input id="submittag" type="text">
+
+        <label for="nametag"> Name : </label>
+        
+        <h3>Please Select the Count </h3>
+        <select name="stars">
+            <option value="Grear">1</option>
+            <option value="Good">2</option>
+            <option value="Normal">3</option>
+        </select>
+        <p>Please Enter your comments: </p>
+        <textarea name="Feedback" id="2" rows="2" cols="30"> 
+            
+        </textarea>
+
+    </form>
 
     </body>
 </html>
